Bug 86018 - STATUSBAR: Resized window under 965 pixels loses visibility of zoom functions
Summary: STATUSBAR: Resized window under 965 pixels loses visibility of zoom functions
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
Inherited From OOo
Hardware: Other All
: medium normal
Assignee: Samuel Mehrbrodt
URL:
Whiteboard: target:4.4.0
Keywords:
Depends on:
Blocks: Statusbar
  Show dependency treegraph
 
Reported: 2014-11-07 20:44 UTC by Yousuf Philips (jay) (retired)
Modified: 2017-05-19 19:49 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:


Attachments
insert field button visible and no zoom buttons (48.01 KB, image/png)
2014-11-07 20:44 UTC, Yousuf Philips (jay) (retired)
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Yousuf Philips (jay) (retired) 2014-11-07 20:44:41 UTC
Created attachment 109114 [details]
insert field button visible and no zoom buttons

If you resize the LO window under 965 pixels, it start chewing away at the zoom features on the left and if you get to 771 pixels, the complete zoom features are gone. The weird thing is that we have 124 pixels taken up by an invisible button that if you double click it, it opens the insert field dialog.

In LO 3.3.0, the zoom features are still visible at 770 pixels, but they fully disappear at 584 pixels.

Not sure if this should be considered a regression as i assume additional fields were added to the statusbar or considered an enhancement for the allowing of the field to be shrunk.

Version: 4.4.0.0.alpha1+
Build ID: d59b9b4af36148e4d8df8f3e3492116d378642e2
TinderBox: Linux-rpm_deb-x86@45-TDF, Branch:master, Time: 2014-11-06_00:36:43
Comment 1 Samuel Mehrbrodt 2014-11-08 10:06:45 UTC
We should just get rid of this invisible field button.
Comment 2 Yousuf Philips (jay) (retired) 2014-11-08 11:00:37 UTC
I would agree with its removal, especially when its invisible and doesnt have a tooltip to let people know what it is. We have also added insert field to the standard toolbar, so its a visible button with a visible tooltip. :D

Is there a setting to allow different fields of the statusbar to become smaller than their contents, because i think page number and the zoom fields should always be visible at small resized windows.
Comment 3 Adolfo Jayme Barrientos 2014-11-08 16:13:08 UTC
Yeah, please remove it and document the change in the Release Notes so that people look for the functionality in the toolbar instead.
Comment 4 Adolfo Jayme Barrientos 2014-11-08 23:44:52 UTC
Samuel Mehrbrodt committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=caaf28488fcca133db885ea0f7d324df9a716eac

fdo#85907 Better use of space in Special Characters dialog

It will be available in 4.4.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 5 Adolfo Jayme Barrientos 2014-11-08 23:46:27 UTC
The commit’s message is, of course, “fdo#86018 Distribute space in statusbar better on small screens”.

The Commit Notification bot is again broken, it seems :-/
Comment 6 Adolfo Jayme Barrientos 2014-11-09 14:35:48 UTC
> The Commit Notification bot is again broken, it seems :-/

Scratch that, it was only a temporary hiccup.
Comment 7 Yousuf Philips (jay) (retired) 2014-11-09 14:44:23 UTC
Reopening as Samuel has a patch for disabling the clicking of the space from opening the insert field dialog. - https://gerrit.libreoffice.org/#/c/12314/
Comment 8 Adolfo Jayme Barrientos 2014-11-09 15:37:36 UTC
I thought this was still marked ASSIGNED.
Comment 9 Yousuf Philips (jay) (retired) 2014-11-09 16:56:13 UTC
(In reply to Adolfo Jayme from comment #8)
> I thought this was still marked ASSIGNED.

The status drop down didnt allow me to switch from fixed to assigned. :D
Comment 10 Commit Notification 2014-11-18 09:38:42 UTC
Samuel Mehrbrodt committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=ebabf6d1fa648d62dd63529e9fe64dcb631caee8

fdo#86018 Don't do anything when clicked on placeholder in statusbar

It will be available in 4.4.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 11 Henrik 2015-02-13 15:22:35 UTC
I agree with Jay's suggestions in Comment 2 that it would be great if the zoom features could remain visible when resizing the window to even less than 965 pixels. 
This would especially helpful when having to windows besides each other considereing the fact that most computer displays have a width of less than 1900 pixels. 

Should this be reported as a separate bug?
Comment 12 Yousuf Philips (jay) (retired) 2015-02-13 18:59:49 UTC
Hi Henrik,

This bug has been fixed so if you have libreoffice 4.4, you will be able to resize it to 865 pixels without loosing the zoom functions.