fdo#86018 Don't do anything when clicked on placeholder in statusbar

No idea why this code got executed in sw, it has no action in sd and sc.

Change-Id: I1d2b4b049f6ae6d117e7bf3464ae993c6951f1dc